--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
   <script>
     let chapters = [
-      "Physical World", "Kinematics", "Laws of Motion", "Rotational Motion", "Gravitation", "Properties of Matter", "Thermodynamics", "Behaviour of Perfect Gas and Kinetics", "Oscillations", "Waves",
-      "Some Basic Concepts of Chemistry", "Structure of Atom", "Classification of Elements and Periodicity in Properties", "Chemical Bonding and Molecular Structure", "Thermodynamics", "Equilibrium", "Redox Reactions", "Organic Chemistry – Some Basic Principles and Techniques", "Hydrocarbons",
-      "The Living World", "Biological Classification", "Plant Kingdom", "Animal Kingdom", "Morphology of Flowering Plants", "Anatomy of Flowering Plants", "Structural Organisation in Animals", "Cell – The Unit of Life", "Biomolecules", "Cell Cycle and Cell Division", "Photosynthesis in Higher Plants"
+      "Physical World", "Kinematics", "Laws of Motion", "Rotational Motion", "Gravitation", "Properties of solids", "Mechanical Properties of Fluids", "Thermal Properties of Matter","Thermodynamics", "Behaviour of Perfect Gas and Kinetics", "Oscillations", "Waves",
+      "Some Basic Concepts of Chemistry", "Structure of Atom", "Classification of Elements and Periodicity in Properties", "Chemical Bonding and Molecular Structure", "Thermodynamics", "Chemical Equilibrium", "Ionic Equillibrium","Redox Reactions", "Organic Chemistry – Some Basic Principles and Techniques", "Hydrocarbons",
+      "The Living World", "Biological Classification", "Plant Kingdom", "Animal Kingdom", "Morphology of Flowering Plants", "Anatomy of Flowering Plants", "Structural Organisation in Animals", "Cell – The Unit of Life", "Biomolecules", "Cell Cycle and Cell Division", "Photosynthesis in Higher Plants","Respiration in Plants","Plant Growth and Development","Breathing and Exchange of Gases","Body Fluids and Circulation","Excretory Products and Their Elimination","Locomotion and Movement","Neural Control and Coordination","Chemical Coordination and Integration"
     ];
 
     const activities = [
